--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -133,6 +133,9 @@
   <data name="IMG_0886" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\IMG_0886.jpeg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Grade Grey (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Grade Grey (1).jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Dark Skies" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Dark Skies.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -204,5 +207,8 @@
   </data>
   <data name="Moss" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Moss.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icons8-male-user-48" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\icons8-male-user-48.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
