--- a/Form1.resx
+++ b/Form1.resx
@@ -129,4 +129,81 @@
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>29</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAAAAEAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAABAAABMLAAATCwAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAEAAAAHgAAACUAAAAlAAAAJQAAACUAAAAlAAAAJQAAACUAAAAlAAAAJQAA
+        ACUAAAAlAAAAJQAAACUAAAAlAAAAJQAAACUAAAAlAAAAJQAAACUAAAAlAAAAJQAAACUAAAAlAAAAJQAA
+        ACUAAAAlAAAAHgAAAAQAAAAAAAAAAAAAAB4AAADUAAAA8gAAAPEAAADxAAAA7wAAAO0AAADtAAAA8QAA
+        APEAAADxAAAA8QAAAPEAAADxAAAA7gAAAO4AAADxAAAA8QAAAPEAAADxAAAA8QAAAPEAAADtAAAA7QAA
+        AO8AAADxAAAA8QAAAPIAAADUAAAAHgAAAAAAAAAAAAAAJQAAAPEAAAD/AAAA/wAAAP8AAACLAAAANgAA
+        AFQAAADwAAAA/wAAAP8AAAD/AAAA/wAAAP8AAACAAAAAgAAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA8AAA
+        AFQAAAA2AAAAiwAAAP8AAAD/AAAA/wAAAPEAAAAlAAAAAAAAAAAAAAAlAAAA8QAAAP8AAAD/AAAA/wAA
+        AGgAAAAAAAAAHwAAAOwAAAD/AAAA/wAAAP8AAAD/AAAA/wAAAFgAAABYAAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAADsAAAAHwAAAAAAAABoAAAA/wAAAP8AAAD/AAAA8QAAACUAAAAAAAAAAAAAACUAAADxAAAA/wAA
+        AP8AAAD/AAAAaAAAAAAAAAAfAAAA7AAAAP8AAAD/AAAA/wAAAP8AAAD/AAAAWAAAAFgAAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAOwAAAAfAAAAAAAAAGgAAAD/AAAA/wAAAP8AAADxAAAAJQAAAAAAAAAAAAAAJQAA
+        APEAAAD/AAAA/wAAAP8AAABoAAAAAAAAAB8AAADsAAAA/wAAAP8AAAD/AAAA/wAAAP8AAABYAAAAWAAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA7AAAAB8AAAAAAAAAaAAAAP8AAAD/AAAA/wAAAPEAAAAlAAAAAAAA
+        AAAAAAAlAAAA8QAAAP8AAAD/AAAA/wAAAGgAAAAAAAAAHwAAAOwAAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AFgAAABYAAAA/wAAAP8AAAD/AAAA/wAAAP8AAADsAAAAHwAAAAAAAABoAAAA/wAAAP8AAAD/AAAA8QAA
+        ACUAAAAAAAAAAAAAACUAAADxAAAA/wAAAP8AAAD/AAAAaAAAAAAAAAAfAAAA6wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAAVwAAAFgAAAD/AAAA/wAAAP8AAAD/AAAA/wAAAOoAAAAeAAAAAAAAAGgAAAD/AAAA/wAA
+        AP8AAADxAAAAJQAAAAAAAAAAAAAAJQAAAPEAAAD/AAAA/wAAAP8AAABoAAAAAAAAAA4AAAB8AAAAmAAA
+        AJcAAACXAAAAlQAAAIwAAAApAAAAKQAAAIwAAACVAAAAlwAAAJcAAACYAAAAfAAAAA4AAAAAAAAAaAAA
+        AP8AAAD/AAAA/wAAAPEAAAAlAAAAAAAAAAAAAAAlAAAA8QAAAP8AAAD/AAAA/wAAAGgAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAcAAAAkAAAAKQAAACwAAAAsAAAAKQAAACQAAAAHAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAABoAAAA/wAAAP8AAAD/AAAA8QAAACUAAAAAAAAAAAAAACUAAADxAAAA/wAAAP8AAAD/AAAAaAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAMwAAAOcAAAD2AAAA9QAAAPUAAAD2AAAA5wAAADMAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAGgAAAD/AAAA/wAAAP8AAADxAAAAJQAAAAAAAAAAAAAAJQAAAPEAAAD/AAAA/wAA
+        AP8AAABoAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA8AAAA+wAAAP8AAAD/AAAA/wAAAP8AAAD7AAAAPAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAaAAAAP8AAAD/AAAA/wAAAPEAAAAlAAAAAAAAAAAAAAAlAAAA8QAA
+        AP8AAAD/AAAA/wAAAGgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADwAAAD7AAAA/wAAAP8AAAD/AAAA/wAA
+        APsAAAA8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAABoAAAA/wAAAP8AAAD/AAAA8QAAACUAAAAAAAAAAAAA
+        ACUAAADxAAAA/wAAAP8AAAD/AAAAaAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAPAAAAPsAAAD/AAAA/wAA
+        AP8AAAD/AAAA+wAAADwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAGgAAAD/AAAA/wAAAP8AAADxAAAAJQAA
+        AAAAAAAAAAAAJQAAAPEAAAD/AAAA/wAAAP8AAABoAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA8AAAA+wAA
+        AP8AAAD/AAAA/wAAAP8AAAD7AAAAPAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAaAAAAP8AAAD/AAAA/wAA
+        APEAAAAlAAAAAAAAAAAAAAAlAAAA8QAAAP8AAAD/AAAA/wAAAGgAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        ADcAAAD0AAAA/wAAAP8AAAD/AAAA/wAAAPMAAAA3AAAAAAAAAAAAAAAAAAAAAAAAAAAAAABoAAAA/wAA
+        AP8AAAD/AAAA8QAAACUAAAAAAAAAAAAAACUAAADxAAAA/wAAAP8AAAD/AAAAaAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAADgAAAEQAAABMAAAATAAAAEwAAABMAAAARAAAAA4AAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AGgAAAD/AAAA/wAAAP8AAADxAAAAJQAAAAAAAAAAAAAAJQAAAPEAAAD/AAAA/wAAAP8AAABoAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAaAAAAP8AAAD/AAAA/wAAAPEAAAAlAAAAAAAAAAAAAAAlAAAA8QAAAP8AAAD/AAAA/wAA
+        AGgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAABoAAAA/wAAAP8AAAD/AAAA8QAAACUAAAAAAAAAAAAAACUAAADxAAAA/wAA
+        AP8AAAD/AAAAtgAAAIEAAACEAAAAhAAAAIQAAACEAAAAhAAAAIQAAACEAAAAhAAAAIQAAACEAAAAhAAA
+        AIQAAACEAAAAhAAAAIQAAACEAAAAgQAAALYAAAD/AAAA/wAAAP8AAADxAAAAJQAAAAAAAAAAAAAAJQAA
+        APEAAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAPEAAAAlAAAAAAAA
+        AAAAAAAlAAAA8QAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA8QAA
+        ACUAAAAAAAAAAAAAACUAAADxAAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAADxAAAAJQAAAAAAAAAAAAAAJQAAAO8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAO8AAAAlAAAAAAAAAAAAAAAQAAAAhgAAAMsAAAD2AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAPgAAADRAAAAiQAAABAAAAAAAAAAAAAAAAAAAAAEAAAAHwAAAEwAAACRAAAA0QAA
+        APEAAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA8wAAANQAAACZAAAAUgAAACMAAAAGAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAMAAAAYAAAAUQAAAJAAAADOAAAA9wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD4AAAA0wAAAJcAAABYAAAAHQAAAAQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAABQAAAB4AAABLAAAAlAAAAM0AAADxAAAA/wAAAP8AAAD/AAAA/wAA
+        APMAAADRAAAAmgAAAFMAAAAhAAAABwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAAAAGgAAAFIAAACUAAAA0wAA
+        ANMAAACUAAAAVwAAACAAAAABAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAcAAAAbAAAAGwAAAAcAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAA/////4AAAAGAAAABgAAAAYEAAIGBAACBgQAAgYEAAIGBAACBgQAAgYHw
+        D4GB8A+BgfAPgYHwD4GB8A+BgfAPgYHwD4GB8A+Bgf//gYH//4GAAAABgAAAAYAAAAGAAAABgAAAAYAA
+        AAHAAAAD+AAAH/8AAP//4Af///w///////8=
+</value>
+  </data>
 </root>
